# projeto-ml

./: app.py  pyproject.toml
